# spoa-rs

./: Cargo.toml  README.md  build.rs  guix.scm
cxx/: spoa_rs.cpp  spoa_rs.hpp
src/: lib.rs
tests/: alignment_tests.rs
